style.css
:root {
  --time-slots: 10;
  --time-slots-fr: 10fr;
  --gap: 8px;
  --left-bar: 70px;

  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
}

body {
  margin: 0;
  padding: 0;

  --background: rgb(255, 255, 255);
  --background-fade: rgba(255, 255, 255, 0.8);
  --text: #222;
  --class-text: #222;
  --now: red;
  --hour: #eee;

  background: var(--background);

  transition: background 0.25s ease;
}

body * {
  box-sizing: border-box;
}

body.dark {
  --background: rgb(34, 34, 34);
  --background-fade: rgba(34, 34, 34, 0.8);
  --text: #aaa;
  --class-text: #888;
  --now: rgb(140, 0, 0);
  --hour: #282828;
}

body.dark .class {
  background: #111 !important;
}

.container {
  display: grid;
  grid-template: auto var(--time-slots-fr) / auto 7fr;

  width: 100vw;
  height: 100vh;
  overflow-x: scroll;
}

.options {
  position: sticky;
  top: 0;
  left: 0;
  width: var(--left-bar);
  z-index: 20;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--background-fade);

  transition: background 0.25s ease;
}

.options svg {
  width: 28px;
  cursor: pointer;
  transition: opacity 0.25s ease, transform 0.25s ease;
}

.options svg path {
  fill: var(--text);

  transition: fill 0.25s ease;
}

@keyframes spin {
  from { transform: rotateZ(0deg) }
  to   { transform: rotateZ(360deg) }
}

.options.updating svg.update {
  animation: spin 1s linear infinite;
}

@keyframes back {
  from { transform: rotateZ(0deg) }
  to   { transform: rotateZ(180deg) }
}

body .options svg.dim {
  animation: back 0.25s forwards ease;
}

@keyframes half {
  from { transform: rotateZ(180deg) }
  to   { transform: rotateZ(360deg) }
}

body.dark .options svg.dim {
  animation: half 0.25s forwards ease;
}

.options svg.dim .switch {
  fill: #fff;
  
  transition: fill 0.25s ease;
}

body.dark svg.dim .switch {
  fill: #aaa;
}

.options svg.dim .dark {
  fill: #222;
}

.days {
  position: sticky;
  top: 0;
  z-index: 10;
  grid-row: 1;
  grid-column: 2;
  display: grid;
  grid-template-columns: 2fr repeat(6, 1fr);
  align-items: center;
  padding: var(--gap);
  grid-gap: var(--gap);
  background: var(--background-fade);
  color: rgb(40, 40, 40);
  font-weight: bold;

  transition: background 0.25s ease;
}

.days svg {
  position: absolute;
  height: 24px;
  cursor: pointer;
  z-index: 1;
}

.days svg.prev {
  left: 0;
}

.days svg.next {
  right: 0;

  transform: rotateZ(180deg);
}

.days svg path {
  fill: var(--text);

  transition: fill 0.25s ease;
}

.days p {
  color: var(--text);

  transition: color 0.25s ease;
}

.days .date {
  font-size: 12px;
  font-weight: normal;
}

.days .weekend p {
  opacity: 0.5;
}

.days .today p {
  color: var(--now);

  transition: color 0.25s ease;
}

.times {
  position: sticky;
  left: 0;
  width: var(--left-bar);
  z-index: 10;
  grid-row: 2;
  grid-column: 1;
  display: grid;
  grid-template-rows: repeat(var(--time-slots), 1fr);
  background: var(--background-fade);

  transition: background 0.25s ease;
}

.times p {
  margin: 0;
  color: var(--text);
  opacity: 0.75;
  transition: color 0.25s ease, opacity 0.25s ease, font-weight 0.25s ease;
}

.times .now {
  color: var(--now);
  font-weight: bold;
  opacity: 1;
}

p {
  margin: 0;
  text-align: center;
}

.classes {
  position: relative;
  grid-row: 2;
  grid-column: 2; 
  display: grid;
  grid-template-columns: 2fr repeat(6, 1fr);

  transition: background 0.25s ease;
}

.classes .line {
  position: absolute;
  left: -100px;
  right: 0;
  height: 1px;
  z-index: 1;
  background: var(--now);

  transition: background 0.25s ease;
}

.classes .hour {
  position: absolute;
  left: -100px;
  right: 0;
  height: 1px;
  z-index: -1;
  background: var(--hour);

  transition: background 0.25s ease;
}

.classes .day {
  display: grid;
  grid-template-rows: repeat(var(--time-slots), 1fr);
  grid-template-areas: 
  "t900"
  "t1000"
  "t1100"
  "t1200"
  "t1300"
  "t1400"
  "t1500"
  "t1600"
  "t1700"
  "t1800";
  opacity: 0.75;
  width: 100%;
  transition: opacity 0.25s ease, transform 0.25s ease, box-shadow 0.25s ease;
}

.day.today {
  opacity: 1;
}

.classes .class {
  margin: calc(var(--gap) * 0.5);
  padding: var(--gap);
  border-radius: var(--gap);
  background: rgb(240, 240, 240);
  overflow: hidden;
  opacity: 0.75;
  transition: transform 0.25s ease, background 0.25s ease;
}

.class.now {
  transform: scale(1.04);
  z-index: 2;
  opacity: 1;
  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
}

.class p {
  color: var(--class-text);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  transition: color 0.25s ease;
}

.class .location {
  font-size: 12px;
  text-align: left;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-bottom: var(--gap);
}

.class .code {
  font-weight: bold;
  font-size: 20px;
  margin-bottom: var(--gap);
}

.class .name {
  font-size: 14px;
}

.class .type {
  font-size: 14px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

form {
  margin: 8px;
}

form input, form button {
  max-width: 50%;
}

form, input, button {
  color: var(--text);

  transition: color 0.25s ease;
}

input, button {
  background: var(--background);
  border: none;
  border-bottom: solid 2px var(--text);

  transition: background 0.25s ease;
}

@media (max-width: 939px) {
  :root {
    --show: 2;
    --width-one: calc((100vw - var(--left-bar) - (var(--show) + 2) * var(--gap)) / var(--show));
    --show-one: repeat(7, var(--width-one));
  }

  .days {
    grid-template-columns: var(--show-one);
  }
  
  .classes {
    grid-template-columns: var(--show-one);
  }
}

@media (max-width: 639px) {
  :root {
    --show: 1;
  }

  .class.now {
    transform: none;
  }
}

